--- a/index.html
+++ b/index.html
@@ -1393,7 +1393,7 @@
       </div>
     </div>
 
-    <div class="container copyright mt-4">
+    <!-- <div class="container copyright mt-4">
       <p>
         <a href="" style="color: black;">WordWide </a><span> |</span>
         <a href="" style="color: black;">Terms of service </a><span>|</span>
@@ -1410,7 +1410,7 @@
         <span>All Rights Reserved.</span>
       </p>
 
-    </div>
+    </div> -->
 
 
   </footer>
