--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>TechnoML</title>
-  <meta name="description" content="">
-  <meta name="keywords" content="">
+  <title>TechnoML - Expert Web Development, SEO, and Digital Solutions</title>
+  <meta name="description"
+    content="TechnoML is a leading web development and digital solutions company specializing in Website Design, SEO, Mobile App Development, and Branding. Delivering customized solutions globally since 2022.">
+  <meta name="keywords"
+    content="TechnoML, Web Development, SEO Services, Digital Marketing, Mobile App Development, Graphic Design, UI/UX Design, e-commerce development, India">
+
 
   <!-- Favicons -->
   <link href="assets/img/favicon.ico" rel="icon">
@@ -31,50 +34,17 @@
 </head>
 
 <body class="index-page">
+ <div id="navbar"></div>
 
-  <header id="header" class="header d-flex align-items-center fixed-top">
-    <div
-      class="header-container container-fluid container-xl position-relative d-flex align-items-center justify-content-between">
+<script>
+  // Load navbar.html into the div with id="navbar"
+  fetch('navbar.html')
+    .then(response => response.text())
+    .then(data => {
+      document.getElementById('navbar').innerHTML = data;
+    });
+</script>
 
-      <a href="" class="logo d-flex align-items-center me-auto me-xl-0">
-        <img src="assets/img/logo.svg" alt="">
-        <!-- <img src="assets/img/web.png" alt="" style="height: 350px;"> -->
-      </a>
-      <nav id="navmenu" class="navmenu">
-        <ul>
-          <li><a href="#" class="active">Home</a></li>
-          <li><a href="#">About Us</a></li>
-          <li><a href="#">Services</a></li>
-          <li><a href="#">Carrer</a></li>
-
-          <li><a href=" ">Industries</a></li>
-          <!-- <li class="dropdown"><a href="#"><span>Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
-            <ul>
-              <li><a href="#">Dropdown 1</a></li>
-              <li class="dropdown"><a href="#"><span>Deep Dropdown</span> <i
-                    class="bi bi-chevron-down toggle-dropdown"></i></a>
-                <ul>
-                  <li><a href="#">Deep Dropdown 1</a></li>
-                  <li><a href="#">Deep Dropdown 2</a></li>
-                  <li><a href="#">Deep Dropdown 3</a></li>
-                  <li><a href="#">Deep Dropdown 4</a></li>
-                  <li><a href="#">Deep Dropdown 5</a></li>
-                </ul>
-              </li>
-              <li><a href="#">Dropdown 2</a></li>
-              <li><a href="#">Dropdown 3</a></li>
-              <li><a href="#">Dropdown 4</a></li>
-            </ul>
-          </li> -->
-          <li><a href="#contact">Contact</a></li>
-        </ul>
-        <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
-      </nav>
-
-      <a class="btn-getstarted" href="#contact">Get Started</a>
-
-    </div>
-  </header>
 
   <main class="main">
 
@@ -1196,198 +1166,95 @@
     </section><!-- /Faq Section -->
 
 
-    <!-- Contact Section -->
-    <section id="contact" class="contact section light-background">
 
-      <!-- Section Title -->
-      <div class="container section-title" data-aos="fade-up">
-        <h2>Contact</h2>
-        <!-- <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p> -->
-      </div><!-- End Section Title -->
+    <footer id="footer" class="footer">
 
-      <div class="container" data-aos="fade-up" data-aos-delay="100">
-
-        <div class="row g-4 g-lg-5">
-          <div class="col-lg-5">
-            <div class="info-box" data-aos="fade-up" data-aos-delay="200">
-              <h3>Contact Info</h3>
-              <!-- <p>Praesent sapien massa, convallis a pellentesque nec, egestas non nisi. Vestibulum ante ipsum primis. -->
+      <div class="container footer-top">
+        <div class="row gy-4">
+          <div class="col-lg-4 col-md-6 footer-about">
+            <a href="" class="logo d-flex align-items-center">
+              <span class="sitename">
+                <img src="assets/img/logo.svg" alt="Logo">
+              </span>
+            </a>
+            <div class="footer-contact pt-3">
+              <p>Dongarpur (476224), Kailarash</p>
+              <p>Morena MP, India</p>
+              <p></p>
+              <p class="mt-3"><strong>Phone:</strong> <span><a href="tel:+917869021171">+917869021171</a></span></p>
+              <p><strong>Email:</strong> <span><a
+                    href="mailto:servicetechnoml@gmail.com?subject=Saying%20Hello%20from%20TechnoML">servicetechnoml@gmail.com</a></span>
               </p>
-
-              <div class="info-item" data-aos="fade-up" data-aos-delay="300">
-                <div class="icon-box">
-                  <i class="bi bi-geo-alt"></i>
-                </div>
-                <div class="content">
-                  <h4>Our Location</h4>
-                  <p>Dongarpur (476224)</p>
-                  <p>Kailarash, Morena</p>
-                  <p>MP, India</p>
-                </div>
-              </div>
-
-              <div class="info-item" data-aos="fade-up" data-aos-delay="400">
-                <div class="icon-box">
-                  <i class="bi bi-telephone"></i>
-                </div>
-                <div class="content">
-                  <h4>Phone Number</h4>
-                  <p>+91 7869021171</p>
-                </div>
-              </div>
-
-              <div class="info-item" data-aos="fade-up" data-aos-delay="500">
-                <div class="icon-box">
-                  <i class="bi bi-envelope"></i>
-                </div>
-                <div class="content">
-                  <h4>Email Address</h4>
-                  <p>servicetechnoml@gmail.com</p>
-                </div>
-              </div>
+            </div>
+            <div class="social-links d-flex mt-4">
+              <a href="" target="_blank"><i class="bi bi-twitter-x"></i></a>
+              <a href="https://www.facebook.com/profile.php?id=100080244219823" target="_blank"><i
+                  class="bi bi-facebook"></i></a>
+              <a href="https://www.instagram.com/technoml.js/" target="_blank"><i class="bi bi-instagram"></i></a>
+              <a href="https://www.linkedin.com/company/technoml/" target="_blank"><i class="bi bi-linkedin"></i></a>
             </div>
           </div>
-
-          <div class="col-lg-7">
-            <div class="contact-form" data-aos="fade-up" data-aos-delay="300">
-              <h3>Get In Touch</h3>
-              <p>Please provide the requested details in the form below and our team will contact you ASAP.
-              </p>
-
-              <form action="forms/contact.php" method="post" class="php-email-form" data-aos="fade-up"
-                data-aos-delay="200">
-                <div class="row gy-4">
-
-                  <div class="col-md-6">
-                    <input type="text" name="name" class="form-control" placeholder="Your Name" required="">
-                  </div>
-
-                  <div class="col-md-6 ">
-                    <input type="email" class="form-control" name="email" placeholder="Your Email" required="">
-                  </div>
-
-                  <div class="col-12">
-                    <input type="text" class="form-control" name="subject" placeholder="Subject" required="">
-                  </div>
-
-                  <div class="col-12">
-                    <textarea class="form-control" name="message" rows="6" placeholder="Message" required=""></textarea>
-                  </div>
-
-                  <div class="col-12 text-center">
-                    <div class="loading">Loading</div>
-                    <div class="error-message"></div>
-                    <div class="sent-message">Your message has been sent. Thank you!</div>
-
-                    <button type="submit" class="btn">Send Message</button>
-                  </div>
-
-                </div>
-              </form>
-
-            </div>
+  
+          <div class="col-lg-2 col-md-3 footer-links">
+            <h4>Useful Links</h4>
+            <ul>
+              <li><a href="#">Home</a></li>
+              <li><a href="#">Our Work</a></li>
+              <li><a href="#">Blog</a></li>
+              <li><a href="#">About us</a></li>
+              <li><a href="#">Services</a></li>
+            </ul>
           </div>
-
+  
+          <div class="col-lg-2 col-md-3 footer-links">
+            <h4>Our Services</h4>
+            <ul>
+              <li><a href="#">Web Design</a></li>
+              <li><a href="#">Web Development</a></li>
+              <li><a href="#">Product Management</a></li>
+              <li><a href="#">Marketing</a></li>
+              <li><a href="#">Graphic Design</a></li>
+            </ul>
+          </div>
+          <div class="col-lg-2 col-md-3 footer-links">
+            <h4>Packages</h4>
+            <ul>
+              <li><a href="#">Molestiae accusamus iure</a></li> 
+            </ul>
+          </div>
+          <div class="col-lg-2 col-md-3 footer-links">
+            <h4>Internship</h4>
+            <ul>
+              <li><a href="#">React JS Developer</a></li> 
+              <li><a href="#">JAVA Developer</a></li> 
+            </ul>
+          </div>
         </div>
-
+        <div class="container copyright mt-4">
+          <p>
+            <a href="" style="color: black;">WordWide </a><span> |</span>
+            <a href="" style="color: black;">Terms of service </a><span>|</span>
+            <a href="" style="color: black;">Privacy policy </a><span> |</span>
+            <a href="" style="color: black;">FAQs</a>
+          </p>
+          <p class="dmcaProtected">
+            <span style="background-color: rgb(55, 201, 55); padding: 0 4px; margin-right: -5px;">DMCA</span>
+            <span style="background-color: black; color: #fff; padding: 0 4px;">PROTECTED</span>
+          </p>
+          <p>© 2024
+            <span>Copyright</span>
+            <strong class="px-1 sitename">TechnoML.</strong>
+            <span>All Rights Reserved.</span>
+          </p>
+  
+        </div>
       </div>
-
-    </section><!-- /Contact Section -->
-
+  
+  
+    </footer>
+  
   </main>
 
-  <footer id="footer" class="footer">
-
-    <div class="container footer-top">
-      <div class="row gy-4">
-        <div class="col-lg-4 col-md-6 footer-about">
-          <a href="" class="logo d-flex align-items-center">
-            <span class="sitename">
-              <img src="assets/img/logo.svg" alt="Logo">
-            </span>
-          </a>
-          <div class="footer-contact pt-3">
-            <p>Dongarpur (476224), Kailarash</p>
-            <p>Morena MP, India</p>
-            <p></p>
-            <p class="mt-3"><strong>Phone:</strong> <span><a href="tel:+917869021171">+917869021171</a></span></p>
-            <p><strong>Email:</strong> <span><a
-                  href="mailto:servicetechnoml@gmail.com?subject=Saying%20Hello%20from%20TechnoML">servicetechnoml@gmail.com</a></span>
-            </p>
-          </div>
-          <div class="social-links d-flex mt-4">
-            <a href="" target="_blank"><i class="bi bi-twitter-x"></i></a>
-            <a href="https://www.facebook.com/profile.php?id=100080244219823" target="_blank"><i
-                class="bi bi-facebook"></i></a>
-            <a href="https://www.instagram.com/technoml.js/" target="_blank"><i class="bi bi-instagram"></i></a>
-            <a href="https://www.linkedin.com/company/technoml/" target="_blank"><i class="bi bi-linkedin"></i></a>
-          </div>
-        </div>
-
-        <div class="col-lg-2 col-md-3 footer-links">
-          <h4>Useful Links</h4>
-          <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Our Work</a></li>
-            <li><a href="#">Blog</a></li>
-            <li><a href="#">About us</a></li>
-            <li><a href="#">Services</a></li>
-          </ul>
-        </div>
-
-        <div class="col-lg-2 col-md-3 footer-links">
-          <h4>Our Services</h4>
-          <ul>
-            <li><a href="#">Web Design</a></li>
-            <li><a href="#">Web Development</a></li>
-            <li><a href="#">Product Management</a></li>
-            <li><a href="#">Marketing</a></li>
-            <li><a href="#">Graphic Design</a></li>
-          </ul>
-        </div>
-        <!-- <div class="col-lg-2 col-md-3 footer-links">
-          <h4>Hic solutasetp</h4>
-          <ul>
-            <li><a href="#">Molestiae accusamus iure</a></li>
-            <li><a href="#">Excepturi dignissimos</a></li>
-            <li><a href="#">Suscipit distinctio</a></li>
-            <li><a href="#">Dilecta</a></li>
-            <li><a href="#">Sit quas consectetur</a></li>
-          </ul>
-        </div>
-        <div class="col-lg-2 col-md-3 footer-links">
-          <h4>Nobis illum</h4>
-          <ul>
-            <li><a href="#">Ipsam</a></li>
-            <li><a href="#">Laudantium dolorum</a></li>
-            <li><a href="#">Dinera</a></li>
-            <li><a href="#">Trodelas</a></li>
-            <li><a href="#">Flexo</a></li>
-          </ul>
-        </div> -->
-      </div>
-      <div class="container copyright mt-4">
-        <p>
-          <a href="" style="color: black;">WordWide </a><span> |</span>
-          <a href="" style="color: black;">Terms of service </a><span>|</span>
-          <a href="" style="color: black;">Privacy policy </a><span> |</span>
-          <a href="" style="color: black;">FAQs</a>
-        </p>
-        <p class="dmcaProtected">
-          <span style="background-color: rgb(55, 201, 55); padding: 0 4px; margin-right: -5px;">DMCA</span>
-          <span style="background-color: black; color: #fff; padding: 0 4px;">PROTECTED</span>
-        </p>
-        <p>© 2024
-          <span>Copyright</span>
-          <strong class="px-1 sitename">TechnoML.</strong>
-          <span>All Rights Reserved.</span>
-        </p>
-
-      </div>
-    </div>
-
-
-  </footer>
 
   <!-- Scroll Top -->
   <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i
