--- a/footer.html
+++ b/footer.html
@@ -9,8 +9,7 @@
             </span>
           </a>
           <div class="footer-contact pt-3">
-            <p>Dongarpur (476224), Kailarash</p>
-            <p>Morena MP, India</p>
+            <p>Morena Madhya Pradesh, India</p>
             <p></p>
             <p class="mt-3"><strong>Phone:</strong> <span><a href="tel:+917869021171">+917869021171</a></span></p>
             <p><strong>Email:</strong> <span><a
