--- a/internship.html
+++ b/internship.html
@@ -32,20 +32,105 @@
   <!-- Main CSS File -->
   <link href="assets/css/main.css" rel="stylesheet">
 </head>
+<style>
+  .card-container {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    gap: 20px;
+    width: 100%;
+    max-width: 1200px;
+  }
+
+  .card {
+    width: 100%;
+    height: 400px;
+    perspective: 1000px;
+    position: relative;
+  }
+
+  .card-inner {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    transform-style: preserve-3d;
+    transition: transform 0.6s;
+  }
+
+  .card:hover .card-inner {
+    transform: rotateY(180deg);
+  }
+
+  .card-front,
+  .card-back {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    backface-visibility: hidden;
+    border-radius: 10px;
+    overflow: hidden;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  }
+
+  .card-front {
+    background-color: #fff;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+  }
+
+  .card-front img {
+    width: 100%;
+    height: 200px;
+    object-fit: cover;
+  }
+
+  .card-front h2 {
+    margin: 15px 0;
+    color: #333;
+  }
+
+  .card-front p {
+    margin: 0 15px;
+    color: #777;
+  }
+
+
+
+  .card-back {
+    transform: rotateY(180deg);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    padding: 20px;
+    text-align: center;
+  }
+
+  .card-back h2 {
+    margin-bottom: 10px;
+  }
+
+  .card-back p {
+    font-size: 14px;
+    line-height: 1.5;
+  }
+</style>
 
 <body class="starter-page-page">
 
- <!-- index.html, about.html, contact.html -->
-<div id="navbar"></div>
+  <!-- index.html, about.html, contact.html -->
+  <div id="navbar"></div>
 
-<script>
-  // Load navbar.html into the div with id="navbar"
-  fetch('navbar.html')
-    .then(response => response.text())
-    .then(data => {
-      document.getElementById('navbar').innerHTML = data;
-    });
-</script>
+  <script>
+    // Load navbar.html into the div with id="navbar"
+    fetch('navbar.html')
+      .then(response => response.text())
+      .then(data => {
+        document.getElementById('navbar').innerHTML = data;
+      });
+  </script>
 
   <main class="main">
 
@@ -77,22 +162,190 @@
 
     </section><!-- /Starter Section Section -->
 
+    <!-- Features Cards Section -->
+    <section id="features-cards" class="features-cards section">
+
+      <div class="tabs container text-center my-3">
+        <button class="btn active me-0 me-sm-2 mx-1" onclick="filterCards('all')">All</button>
+        <button class="btn btn-primary me-0 me-sm-2 mx-1" onclick="filterCards('it')">IT</button>
+        <button class="btn btn-primary me-0 me-sm-2 mx-1" onclick="filterCards('marketing')">Marketing</button>
+        <button class="btn btn-primary me-0 me-sm-2 mx-1" onclick="filterCards('finance')">Finance</button>
+      </div>
+      <div class="container card-container">
+        <div class="card" data-category="it">
+          <div class="card-inner">
+            <div class="card-front">
+              <img src="assets/img/internship/Web Development.png" alt="Card Image">
+              <h2>Web Development</h2>
+            </div>
+            <div class="card-back">
+              <p>Join us as a Web Development Intern! Work on live projects, enhance your skills in front-end and
+                back-end development, and gain industry experience. Flexible hours, mentorship, and an internship
+                certificate await you</p>
+              <p class="btn btn-primary me-0 me-sm-2 mx-1">Apply Now ↓</p>
+
+              <div class="flex">
+
+                <a href="#" class="btn btn-primary">1 Month ➜</a>
+
+                <a href="#" class="btn btn-primary">3 Months ➜</a>
+                <a href="#" class="btn btn-primary">6 Months ➜</a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="card" data-category="finance">
+          <div class="card-inner">
+            <div class="card-front">
+              <img src="assets/img/internship/Web Development.png" alt="Card Image">
+              <h2>Web Development</h2>
+            </div>
+            <div class="card-back">
+              <p>Join us as a Web Development Intern! Work on live projects, enhance your skills in front-end and
+                back-end development, and gain industry experience. Flexible hours, mentorship, and an internship
+                certificate await you</p>
+              <p class="btn btn-primary me-0 me-sm-2 mx-1">Apply Now ↓</p>
+
+              <div class="flex">
+
+                <a href="#" class="btn btn-primary">1 Month ➜</a>
+
+                <a href="#" class="btn btn-primary">3 Months ➜</a>
+                <a href="#" class="btn btn-primary">6 Months ➜</a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="card" data-category="marketing">
+          <div class="card-inner">
+            <div class="card-front">
+              <img src="assets/img/internship/Web Development.png" alt="Card Image">
+              <h2>Web Development</h2>
+            </div>
+            <div class="card-back">
+              <p>Join us as a Web Development Intern! Work on live projects, enhance your skills in front-end and
+                back-end development, and gain industry experience. Flexible hours, mentorship, and an internship
+                certificate await you</p>
+              <p class="btn btn-primary me-0 me-sm-2 mx-1">Apply Now ↓</p>
+
+              <div class="flex">
+
+                <a href="#" class="btn btn-primary">1 Month ➜</a>
+
+                <a href="#" class="btn btn-primary">3 Months ➜</a>
+                <a href="#" class="btn btn-primary">6 Months ➜</a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="card" data-category="finance">
+          <div class="card-inner">
+            <div class="card-front">
+              <img src="assets/img/internship/Web Development.png" alt="Card Image">
+              <h2>Web Development</h2>
+            </div>
+            <div class="card-back">
+              <p>Join us as a Web Development Intern! Work on live projects, enhance your skills in front-end and
+                back-end development, and gain industry experience. Flexible hours, mentorship, and an internship
+                certificate await you</p>
+              <p class="btn btn-primary me-0 me-sm-2 mx-1">Apply Now ↓</p>
+
+              <div class="flex">
+
+                <a href="#" class="btn btn-primary">1 Month ➜</a>
+
+                <a href="#" class="btn btn-primary">3 Months ➜</a>
+                <a href="#" class="btn btn-primary">6 Months ➜</a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="card" data-category="it">
+          <div class="card-inner">
+            <div class="card-front">
+              <img src="assets/img/internship/Web Development.png" alt="Card Image">
+              <h2>Web Development</h2>
+            </div>
+            <div class="card-back">
+              <p>Join us as a Web Development Intern! Work on live projects, enhance your skills in front-end and
+                back-end development, and gain industry experience. Flexible hours, mentorship, and an internship
+                certificate await you</p>
+              <p class="btn btn-primary me-0 me-sm-2 mx-1">Apply Now ↓</p>
+
+              <div class="flex">
+
+                <a href="#" class="btn btn-primary">1 Month ➜</a>
+
+                <a href="#" class="btn btn-primary">3 Months ➜</a>
+                <a href="#" class="btn btn-primary">6 Months ➜</a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+
+        <div class="card">
+          <div class="card-inner">
+            <div class="card-front">
+              <img src="assets/img/internship/Web Development.png" alt="Card Image">
+              <h2>Web Development</h2>
+            </div>
+            <div class="card-back">
+              <p>Join us as a Web Development Intern! Work on live projects, enhance your skills in front-end and
+                back-end development, and gain industry experience. Flexible hours, mentorship, and an internship
+                certificate await you</p>
+              <p class="btn btn-primary me-0 me-sm-2 mx-1">Apply Now ↓</p>
+
+              <div class="flex">
+
+                <a href="#" class="btn btn-primary">1 Month ➜</a>
+
+                <a href="#" class="btn btn-primary">3 Months ➜</a>
+                <a href="#" class="btn btn-primary">6 Months ➜</a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+
+      </div>
+
+    </section><!-- /Starter Section Section -->
+
   </main>
 
- <div id="footer"></div>
+  <div id="footer"></div>
 
-<script>
-  // Load navbar.html into the div with id="navbar"
-  fetch('footer.html')
-    .then(response => response.text())
-    .then(data => {
-      document.getElementById('footer').innerHTML = data;
-    });
-</script>
+  <script>
+    // Load navbar.html into the div with id="navbar"
+    fetch('footer.html')
+      .then(response => response.text())
+      .then(data => {
+        document.getElementById('footer').innerHTML = data;
+      });
+  </script>
 
   <!-- Scroll Top -->
-  <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
+  <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i
+      class="bi bi-arrow-up-short"></i></a>
 
+  <script>
+    function filterCards(category) {
+      const cards = document.querySelectorAll('.card');
+      const buttons = document.querySelectorAll('.tabs button');
+
+      buttons.forEach(button => button.classList.remove('active'));
+      document.querySelector(`.tabs button[onclick="filterCards('${category}')"]`).classList.add('active');
+
+      cards.forEach(card => {
+        if (category === 'all' || card.dataset.category === category) {
+          card.style.display = 'block';
+        } else {
+          card.style.display = 'none';
+        }
+      });
+    }
+  </script>
   <!-- Vendor JS Files -->
   <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
   <script src="assets/vendor/php-email-form/validate.js"></script>
