--- a/footer.html
+++ b/footer.html
@@ -1,3 +1,13 @@
+<style>
+  @media (max-width: 600px) {
+    .row>* {
+  padding-left: calc(var(--bs-gutter-x)* 4.5);
+ }
+ .footer .footer-top {
+    padding-top: 0px;
+
+}
+</style>
 <footer id="footer" class="footer">
 
     <div class="container footer-top">
