--- a/contact.html
+++ b/contact.html
@@ -52,7 +52,7 @@
     <!-- Page Title -->
     <div class="page-title light-background">
       <div class="container">
-        <h1>Feel Free to React Out</h1>
+        <h1>Feel Free to Reach Out</h1>
         <nav class="breadcrumbs">
           <ol>
             <li><a href="index.html">Home</a></li>
@@ -76,9 +76,11 @@
             <div class="info-box" data-aos="fade-up" data-aos-delay="200">
               <h3>Contact Info</h3>
               <!-- <p>Praesent sapien massa, convallis a pellentesque nec, egestas non nisi. Vestibulum ante ipsum primis. -->
-              </p>
+
+            
 
               <div class="info-item" data-aos="fade-up" data-aos-delay="300">
+
                 <div class="icon-box">
                   <i class="bi bi-geo-alt"></i>
                 </div>
