--- a/index.html
+++ b/index.html
@@ -6,11 +6,46 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <title>TechnoML - Expert Web Development, SEO, and Digital Solutions</title>
   <meta name="description"
-    content="TechnoML is a leading web development and digital solutions company specializing in Website Design, SEO, Mobile App Development, and Branding. Delivering customized solutions globally since 2022.">
+    content="TechnoML is a premier web development and digital solutions company offering customized services in Website Design, SEO, Mobile App Development, and Branding. Delivering innovative solutions globally since 2022.">
   <meta name="keywords"
-    content="TechnoML, Web Development, SEO Services, Digital Marketing, Mobile App Development, Graphic Design, UI/UX Design, e-commerce development, India">
-
-
+    content="TechnoML, Web Development, SEO Services, Digital Marketing, Mobile App Development, Graphic Design, UI/UX Design, e-commerce development, custom web solutions, India">
+  <meta name="author" content="TechnoML">
+  <meta name="robots" content="index, follow">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="language" content="English">
+  <meta property="og:title" content="TechnoML - Expert Web Development, SEO, and Digital Solutions">
+  <meta property="og:description"
+    content="TechnoML offers world-class services in web development, SEO, branding, and mobile app development. Explore customized solutions tailored for your business.">
+  <meta property="og:url" content="https://technoml.in">
+  <meta property="og:type" content="website">
+  <meta property="og:image" content="https://technoml.in/assets/img/logo.svg">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="TechnoML - Expert Web Development & Digital Solutions">
+  <meta name="twitter:description"
+    content="TechnoML delivers cutting-edge web development and digital marketing solutions. Connect with us for innovative and tailored services.">
+  <meta name="twitter:image" content="https://technoml.in/assets/img/logo.svg">
+  <meta name="canonical" content="https://technoml.in">
+  
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Organization",
+    "name": "TechnoML",
+    "url": "https://technoml.in",
+    "logo": "https://technoml.in/assets/img/logo.svg",
+    "description": "TechnoML is a leading provider of web development, SEO, branding, and mobile app solutions, delivering excellence since 2022.",
+    "sameAs": [
+      "https://www.facebook.com/technoml",
+      "https://twitter.com/technoml",
+      "https://www.linkedin.com/company/technoml"
+    ],
+    "address": {
+      "@type": "PostalAddress",
+      "addressLocality": "India",
+      "addressCountry": "IN"
+    }
+  }
+  </script>
   <!-- Favicons -->
   <link href="assets/img/favicon.ico" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
