--- a/footer.html
+++ b/footer.html
@@ -1,94 +1,99 @@
 <style>
   @media (max-width: 600px) {
-    .row>* {
-  padding-left: calc(var(--bs-gutter-x)* 4.5);
- }
- .footer .footer-top {
-    padding-top: 0px;
+    .footer {
+      padding-left: 20px;
+    }
+    .footer .footer-top {
+      padding-top: 0px;
 
-}
+    }
 </style>
 <footer id="footer" class="footer">
 
-    <div class="container footer-top">
-      <div class="row gy-4">
-        <div class="col-lg-4 col-md-6 footer-about">
-          <a href="" class="logo d-flex align-items-center">
-            <span class="sitename">
-              <img src="assets/img/logo.svg" alt="Logo">
-            </span>
-          </a>
-          <div class="footer-contact pt-3">
-            <p>Morena Madhya Pradesh, India</p>
-            <p></p>
-            <p class="mt-3"><strong>Phone:</strong> <span><a href="tel:+917869021171">+917869021171</a></span></p>
-            <p><strong>Email:</strong> <span><a
-                  href="mailto:servicetechnoml@gmail.com?subject=Saying%20Hello%20from%20TechnoML">servicetechnoml@gmail.com</a></span>
-            </p>
-          </div>
-          <div class="social-links d-flex mt-4">
-            <a href="" target="_blank"><i class="bi bi-twitter-x"></i></a>
-            <a href="https://www.facebook.com/profile.php?id=100080244219823" target="_blank"><i
-                class="bi bi-facebook"></i></a>
-            <a href="https://www.instagram.com/technoml.js/" target="_blank"><i class="bi bi-instagram"></i></a>
-            <a href="https://www.linkedin.com/company/technoml/" target="_blank"><i class="bi bi-linkedin"></i></a>
-          </div>
+  <div class="container footer-top">
+    <div class="row gy-4">
+      <div class="col-lg-4 col-md-6 footer-about">
+        <a href="" class="logo d-flex align-items-center">
+          <span class="sitename">
+            <img src="assets/img/logo.svg" alt="Logo">
+          </span>
+        </a>
+        <div class="footer-contact pt-3">
+          <p>Morena Madhya Pradesh, India</p>
+          <p></p>
+          <p class="mt-3"><strong>Phone:</strong> <span><a href="tel:+917869021171">+917869021171</a></span></p>
+          <p><strong>Email:</strong> <span><a
+                href="mailto:servicetechnoml@gmail.com?subject=Saying%20Hello%20from%20TechnoML">servicetechnoml@gmail.com</a></span>
+          </p>
         </div>
-
-        <div class="col-lg-2 col-md-3 footer-links">
-          <h4>Useful Links</h4>
-          <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Our Work</a></li>
-            <li><a href="#">Blog</a></li>
-            <li><a href="#">About us</a></li>
-            <li><a href="service-details.html">Services</a></li>
-          </ul>
-        </div>
-
-        <div class="col-lg-2 col-md-3 footer-links">
-          <h4>Our Services</h4>
-          <ul>
-            <li><a href="#">Web Design</a></li>
-            <li><a href="#">Web Development</a></li>
-            <li><a href="#">Product Management</a></li>
-            <li><a href="#">Marketing</a></li>
-            <li><a href="#">Graphic Design</a></li>
-          </ul>
-        </div>
-        <div class="col-lg-2 col-md-3 footer-links">
-          <h4>Packages</h4>
-          <ul>
-            <li><a href="#">Molestiae accusamus iure</a></li> 
-          </ul>
-        </div>
-        <div class="col-lg-2 col-md-3 footer-links">
-          <h4>Internship</h4>
-          <ul>
-            <li><a href="#">React JS Developer</a></li> 
-            <li><a href="#">JAVA Developer</a></li> 
-          </ul>
+        <div class="social-links d-flex mt-4">
+          <a href="" target="_blank"><i class="bi bi-twitter-x"></i></a>
+          <a href="https://www.facebook.com/profile.php?id=100080244219823" target="_blank"><i
+              class="bi bi-facebook"></i></a>
+          <a href="https://www.instagram.com/technoml.js/" target="_blank"><i class="bi bi-instagram"></i></a>
+          <a href="https://www.linkedin.com/company/technoml/" target="_blank"><i class="bi bi-linkedin"></i></a>
         </div>
       </div>
-      <div class="container copyright mt-4">
-        <p>
-          <a href="" style="color: black;">WordWide </a><span> |</span>
-          <a href="" style="color: black;">Terms of service </a><span>|</span>
-          <a href="" style="color: black;">Privacy policy </a><span> |</span>
-          <a href="" style="color: black;">FAQs</a>
-        </p>
-        <p class="dmcaProtected">
-          <span style="background-color: rgb(55, 201, 55); padding: 0 4px; margin-right: -5px;">DMCA</span>
-          <span style="background-color: black; color: #fff; padding: 0 4px;">PROTECTED</span>
-        </p>
-        <p>© 2024
-          <span>Copyright</span>
-          <strong class="px-1 sitename">TechnoML.</strong>
-          <span>All Rights Reserved.</span>
-        </p>
 
+      <div class="col-lg-2 col-md-3 footer-links">
+        <h4>Useful Links</h4>
+        <ul>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">Our Work</a></li>
+          <li><a href="#">Blog</a></li>
+          <li><a href="#">About us</a></li>
+          <li><a href="service-details.html">Services</a></li>
+        </ul>
+      </div>
+
+      <div class="col-lg-2 col-md-3 footer-links">
+        <h4>Our Services</h4>
+        <ul>
+          <li><a href="#">Web Design</a></li>
+          <li><a href="#">Web Development</a></li>
+          <li><a href="#">Product Management</a></li>
+          <li><a href="#">Marketing</a></li>
+          <li><a href="#">Graphic Design</a></li>
+        </ul>
+      </div>
+      <div class="col-lg-2 col-md-3 footer-links">
+        <h4>Internship</h4>
+        <ul>
+          <li><a href="#">Computer Science</a></li>
+          <li><a href="#">Management</a></li>
+          <li><a href="#">Electronics & Communication</a></li>
+          <li><a href="#">Aeronautical</a></li>
+          <li><a href="#">Civil</a></li>
+          <li><a href="#">Bio-Technology</a></li>
+          <li><a href="#">Medical</a></li>
+        </ul>
+      </div>
+      <div class="col-lg-2 col-md-3 footer-links">
+        <h4>Blog</h4>
+        <ul>
+          <li><a href="#">TechnoML</a></li>
+        </ul>
       </div>
     </div>
+    <div class="container copyright mt-4">
+      <p>
+        <a href="" style="color: black;">WordWide </a><span> |</span>
+        <a href="" style="color: black;">Terms of service </a><span>|</span>
+        <a href="" style="color: black;">Privacy policy </a><span> |</span>
+        <a href="" style="color: black;">FAQs</a>
+      </p>
+      <p class="dmcaProtected">
+        <span style="background-color: rgb(55, 201, 55); padding: 0 4px; margin-right: -5px;">DMCA</span>
+        <span style="background-color: black; color: #fff; padding: 0 4px;">PROTECTED</span>
+      </p>
+      <p>© 2024
+        <span>Copyright</span>
+        <strong class="px-1 sitename">TechnoML.</strong>
+        <span>All Rights Reserved.</span>
+      </p>
+
+    </div>
+  </div>
 
 
-  </footer>
+</footer>
