--- a/service-details.html
+++ b/service-details.html
@@ -35,18 +35,18 @@
 
 <body class="service-details-page">
 
- 
-<!-- index.html, about.html, contact.html -->
-<div id="navbar"></div>
 
-<script>
-  // Load navbar.html into the div with id="navbar"
-  fetch('navbar.html')
-    .then(response => response.text())
-    .then(data => {
-      document.getElementById('navbar').innerHTML = data;
-    });
-</script>
+  <!-- index.html, about.html, contact.html -->
+  <div id="navbar"></div>
+
+  <script>
+    // Load navbar.html into the div with id="navbar"
+    fetch('navbar.html')
+      .then(response => response.text())
+      .then(data => {
+        document.getElementById('navbar').innerHTML = data;
+      });
+  </script>
 
   <main class="main">
 
@@ -75,11 +75,17 @@
             <div class="service-box">
               <h4>Serices List</h4>
               <div class="services-list">
-                <a href="#" class="active"><i class="bi bi-arrow-right-circle"></i><span>Web Design</span></a>
-                <a href="#"><i class="bi bi-arrow-right-circle"></i><span>Web Design</span></a>
-                <a href="#"><i class="bi bi-arrow-right-circle"></i><span>Product Management</span></a>
-                <a href="#"><i class="bi bi-arrow-right-circle"></i><span>Graphic Design</span></a>
-                <a href="#"><i class="bi bi-arrow-right-circle"></i><span>Marketing</span></a>
+
+                <a href="#" class="active" onclick="showImage('content1')"><i
+                    class="bi bi-arrow-right-circle"></i><span>Website Design</span></a>
+                <a href="#" onclick="showImage('content2')"><i class="bi bi-arrow-right-circle"></i><span>Application
+                    Development</span></a>
+                <a href="#" onclick="showImage('content3')"><i class="bi bi-arrow-right-circle"></i><span>Graphic
+                    Design</span></a>
+                <a href="#" onclick="showImage('content4')"><i class="bi bi-arrow-right-circle"></i><span>Digital
+                    Marketing</span></a>
+                <a href="#" onclick="showImage('content5')"><i class="bi bi-arrow-right-circle"></i><span>Technical
+                    Support</span></a>
               </div>
             </div><!-- End Services List -->
 
@@ -94,29 +100,68 @@
             <div class="help-box d-flex flex-column justify-content-center align-items-center">
               <i class="bi bi-headset help-icon"></i>
               <h4>Have a Question?</h4>
-              <p class="d-flex align-items-center mt-2 mb-0"><i class="bi bi-telephone me-2"></i> <span>+1 5589 55488 55</span></p>
-              <p class="d-flex align-items-center mt-1 mb-0"><i class="bi bi-envelope me-2"></i> <a href="mailto:contact@example.com">contact@example.com</a></p>
+              <p class="d-flex align-items-center mt-2 mb-0"><i class="bi bi-telephone me-2"></i> <span>+1 5589 55488
+                  55</span></p>
+              <p class="d-flex align-items-center mt-1 mb-0"><i class="bi bi-envelope me-2"></i> <a
+                  href="mailto:contact@example.com">contact@example.com</a></p>
             </div>
 
           </div>
 
-          <div class="col-lg-8 ps-lg-5" data-aos="fade-up" data-aos-delay="200">
-            <img src="assets/img/services.jpg" alt="" class="img-fluid services-img">
-            <h3>Temporibus et in vero dicta aut eius lidero plastis trand lined voluptas dolorem ut voluptas</h3>
-            <p>
-              Blanditiis voluptate odit ex error ea sed officiis deserunt. Cupiditate non consequatur et doloremque consequuntur. Accusantium labore reprehenderit error temporibus saepe perferendis fuga doloribus vero. Qui omnis quo sit. Dolorem architecto eum et quos deleniti officia qui.
-            </p>
-            <ul>
-              <li><i class="bi bi-check-circle"></i> <span>Aut eum totam accusantium voluptatem.</span></li>
-              <li><i class="bi bi-check-circle"></i> <span>Assumenda et porro nisi nihil nesciunt voluptatibus.</span></li>
-              <li><i class="bi bi-check-circle"></i> <span>Ullamco laboris nisi ut aliquip ex ea</span></li>
-            </ul>
-            <p>
-              Est reprehenderit voluptatem necessitatibus asperiores neque sed ea illo. Deleniti quam sequi optio iste veniam repellat odit. Aut pariatur itaque nesciunt fuga.
-            </p>
-            <p>
-              Sunt rem odit accusantium omnis perspiciatis officia. Laboriosam aut consequuntur recusandae mollitia doloremque est architecto cupiditate ullam. Quia est ut occaecati fuga. Distinctio ex repellendus eveniet velit sint quia sapiente cumque. Et ipsa perferendis ut nihil. Laboriosam vel voluptates tenetur nostrum. Eaque iusto cupiditate et totam et quia dolorum in. Sunt molestiae ipsum at consequatur vero. Architecto ut pariatur autem ad non cumque nesciunt qui maxime. Sunt eum quia impedit dolore alias explicabo ea.
-            </p>
+          <div class="image-display col-lg-8 ps-lg-5" data-aos="fade-up" data-aos-delay="200">
+            <div id="content1" style="display: block;">
+              <img src="assets/img/services.jpg" alt="" class="img-fluid services-img">
+              <h3>Temporibus et in vero dicta aut eius lidero plastis trand lined voluptas dolorem ut voluptas</h3>
+              <p>
+                Blanditiis voluptate odit ex error ea sed officiis deserunt. Cupiditate non consequatur et doloremque
+                consequuntur. Accusantium labore reprehenderit error temporibus saepe perferendis fuga doloribus vero.
+                Qui omnis quo sit. Dolorem architecto eum et quos deleniti officia qui.
+              </p>
+              <ul>
+                <li><i class="bi bi-check-circle"></i> <span>Aut eum totam accusantium voluptatem.</span></li>
+                <li><i class="bi bi-check-circle"></i> <span>Assumenda et porro nisi nihil nesciunt voluptatibus.</span>
+                </li>
+                <li><i class="bi bi-check-circle"></i> <span>Ullamco laboris nisi ut aliquip ex ea</span></li>
+              </ul>
+              <p>
+                Est reprehenderit voluptatem necessitatibus asperiores neque sed ea illo. Deleniti quam sequi optio iste
+                veniam repellat odit. Aut pariatur itaque nesciunt fuga.
+              </p>
+              <p>
+                Sunt rem odit accusantium omnis perspiciatis officia. Laboriosam aut consequuntur recusandae mollitia
+                doloremque est architecto cupiditate ullam. Quia est ut occaecati fuga. Distinctio ex repellendus
+                eveniet velit sint quia sapiente cumque. Et ipsa perferendis ut nihil. Laboriosam vel voluptates tenetur
+                nostrum. Eaque iusto cupiditate et totam et quia dolorum in. Sunt molestiae ipsum at consequatur vero.
+                Architecto ut pariatur autem ad non cumque nesciunt qui maxime. Sunt eum quia impedit dolore alias
+                explicabo ea.
+              </p>
+            </div>
+            <div id="content2" style="display: none;">
+              <h3>Temporibus et in vero dicta aut eius lidero plastis trand lined voluptas dolorem ut voluptas</h3>
+              <p>
+                Blanditiis voluptate odit ex error ea sed officiis deserunt. Cupiditate non consequatur et doloremque
+                consequuntur. Accusantium labore reprehenderit error temporibus saepe perferendis fuga doloribus vero.
+                Qui omnis quo sit. Dolorem architecto eum et quos deleniti officia qui.
+              </p>
+              <ul>
+                <li><i class="bi bi-check-circle"></i> <span>Aut eum totam accusantium voluptatem.</span></li>
+                <li><i class="bi bi-check-circle"></i> <span>Assumenda et porro nisi nihil nesciunt voluptatibus.</span>
+                </li>
+                <li><i class="bi bi-check-circle"></i> <span>Ullamco laboris nisi ut aliquip ex ea</span></li>
+              </ul>
+              <p>
+                Est reprehenderit voluptatem necessitatibus asperiores neque sed ea illo. Deleniti quam sequi optio iste
+                veniam repellat odit. Aut pariatur itaque nesciunt fuga.
+              </p>
+              <p>
+                Sunt rem odit accusantium omnis perspiciatis officia. Laboriosam aut consequuntur recusandae mollitia
+                doloremque est architecto cupiditate ullam. Quia est ut occaecati fuga. Distinctio ex repellendus
+                eveniet velit sint quia sapiente cumque. Et ipsa perferendis ut nihil. Laboriosam vel voluptates tenetur
+                nostrum. Eaque iusto cupiditate et totam et quia dolorum in. Sunt molestiae ipsum at consequatur vero.
+                Architecto ut pariatur autem ad non cumque nesciunt qui maxime. Sunt eum quia impedit dolore alias
+                explicabo ea.
+              </p>
+            </div>
           </div>
 
         </div>
@@ -136,9 +181,26 @@
       .then(data => {
         document.getElementById('footer').innerHTML = data;
       });
+
+
+    function showImage(contentId) {
+      const contents = document.querySelectorAll('.image-display > div');
+      const buttons = document.querySelectorAll('.services-list a');
+
+      contents.forEach(content => {
+        content.style.display = content.id === contentId ? 'block' : 'none';
+      });
+
+      buttons.forEach(button => {
+        button.classList.remove('active');
+      });
+
+      document.querySelector(`[onclick="showImage('${contentId}')"]`).classList.add('active');
+    }
   </script>
   <!-- Scroll Top -->
-  <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
+  <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i
+      class="bi bi-arrow-up-short"></i></a>
 
   <!-- Vendor JS Files -->
   <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
